# sms-malicious-classifier

./: .gitignore  AGENTS.md  LEARNINGS.md  README.md  pyproject.toml
data/processed/: test.csv  train.csv  validation.csv
docs/: github-issues.md
notebooks/: 01_data_exploration.ipynb  02_train_distilbert.ipynb  03_evaluate_and_demo.ipynb
scripts/: predict.py
src/: main.py
src/sms_classifier/: __init__.py  data.py  labels.py  model.py  predict.py
