[project]
name = "sms-malicious-classifier"
version = "0.1.0"
description = "A uv + Jupyter NLP project for classifying SMS messages as malicious or benign with DistilBERT."
readme = "README.md"
authors = [
    { name = "Gilles Major", email = "major.gilles@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
]

[project.scripts]
sms-classifier = "sms_classifier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sms_classifier"]